--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,39 @@ button {
   font-size: 1rem;
   cursor: pointer;
 }
+
+.ocean {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  z-index: 1;
+}
+
+.wave {
+  position: absolute;
+  top: 80%;
+  width: 200%;
+  height: 200px;
+  background: url("https://svgshare.com/i/uR5.svg") repeat-x;
+  background-size: contain;
+  opacity: 0.5;
+  animation: wave 10s linear infinite;
+}
+
+.wave:nth-of-type(2) {
+  top: 85%;
+  opacity: 0.7;
+  animation: wave 15s linear infinite reverse;
+}
+
+@keyframes wave {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
